fix(navigation-pane): resolve breadcrumb overflow issue, add prop to enable/disable collapsible navigation pane feature

--- a/frontend/src/FileManager/FileManager.scss
+++ b/frontend/src/FileManager/FileManager.scss
@@ -78,6 +78,14 @@ svg {
       }
     }
 
+    .navigation-pane.open {
+      display: block;
+    }
+
+    .navigation-pane.closed {
+      display: none;
+    }
+
     .folders-preview {
       z-index: 2;
       background-color: white;
